--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-	"name": "crypto-tracker",
+	"name": "react-masterclass-challenge-crypto",
 	"version": "0.1.0",
-	"author": "toweringcloud",
-	"description": "typescript react coin price search",
-	"homepage": "https://github.com/toweringcloud/crypto-tracker",
-	"license": "MIT",
-	"type": "module",
+	"private": true,
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
@@ -15,22 +11,19 @@
 		"deploy": "gh-pages -d build"
 	},
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^11.2.7",
-		"@testing-library/user-event": "^12.8.3",
+		"@tanstack/react-query": "^5.0.5",
+		"@tanstack/react-query-devtools": "^5.4.2",
 		"@types/jest": "^27.0.2",
 		"@types/node": "^16.11.1",
-		"@types/react": "^17.0.30",
-		"@types/react-dom": "^17.0.9",
-		"apexcharts": "^3.29.0",
-		"gh-pages": "^3.2.3",
-		"react": "^17.0.2",
-		"react-apexcharts": "^1.3.9",
-		"react-dom": "^17.0.2",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"apexcharts": "^3.44.0",
+		"react": "^18.2.0",
+		"react-apexcharts": "^1.4.1",
+		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
-		"react-query": "^3.27.0",
 		"react-router-dom": "^5.3.0",
-		"react-scripts": "4.0.3",
+		"react-scripts": "^5.0.1",
 		"styled-components": "^5.3.1",
 		"styled-reset": "^4.3.4",
 		"typescript": "^4.4.4",
@@ -38,7 +31,6 @@
 	},
 	"devDependencies": {
 		"@types/react-helmet": "^6.1.8",
-		"@types/react-query": "^1.2.9",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
 		"gh-pages": "^6.0.0"
