--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
-	"name": "react-masterclass-challenge-crypto",
+	"name": "crypto-tracker",
 	"version": "0.1.0",
-	"private": true,
+	"description": "coin price search using react query & apexchart",
+	"license": "MIT",
+	"author": "toweringcloud",
+	"homepage": "https://github.com/toweringcloud/crypto-tracker",
+	"inspiredby": "https://nomadcoders.co/react-masterclass",
+	"keywords": [
+		"react",
+		"query",
+		"apexchart",
+		"crypto",
+		"ranking",
+		"chart",
+		"grid"
+	],
+	"type": "module",
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
@@ -13,8 +27,6 @@
 	"dependencies": {
 		"@tanstack/react-query": "^5.0.5",
 		"@tanstack/react-query-devtools": "^5.4.2",
-		"@types/jest": "^27.0.2",
-		"@types/node": "^16.11.1",
 		"@types/react": "^18.2.15",
 		"@types/react-dom": "^18.2.7",
 		"apexcharts": "^3.44.0",
