--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-helmet": "^6.1.0",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "^5.0.1",
+		"recoil": "^0.7.7",
 		"styled-components": "^5.3.1",
 		"styled-reset": "^4.3.4",
 		"typescript": "^4.4.4",
