--- a/package.json
+++ b/package.json
@@ -27,26 +27,26 @@
 	"dependencies": {
 		"@tanstack/react-query": "^5.0.5",
 		"@tanstack/react-query-devtools": "^5.4.2",
-		"@types/react": "^18.2.15",
-		"@types/react-dom": "^18.2.7",
 		"apexcharts": "^3.44.0",
 		"react": "^18.2.0",
 		"react-apexcharts": "^1.4.1",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
 		"react-router-dom": "^5.3.0",
-		"react-scripts": "^5.0.1",
 		"recoil": "^0.7.7",
 		"styled-components": "^5.3.1",
-		"styled-reset": "^4.3.4",
-		"typescript": "^4.4.4",
-		"web-vitals": "^1.1.2"
+		"styled-reset": "^4.3.4"
 	},
 	"devDependencies": {
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
 		"@types/react-helmet": "^6.1.8",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
-		"gh-pages": "^6.0.0"
+		"gh-pages": "^6.0.0",
+		"react-scripts": "^5.0.1",
+		"typescript": "^4.4.4",
+		"web-vitals": "^1.1.2"
 	},
 	"eslintConfig": {
 		"extends": [
