[TEST] netlify homepage to project build

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "crypto ranking search using react query & apexchart",
 	"license": "MIT",
 	"author": "toweringcloud",
-	"homepage": "https://toweringcloud.github.io/crypto-tracker",
+	"homepage": "https://enchanting-semolina-556992.netlify.app",
 	"inspiredby": "https://nomadcoders.co/react-masterclass",
 	"keywords": [
 		"react",
