--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
+		"eject": "react-scripts eject"
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.0.5",
@@ -43,7 +41,6 @@
 		"@types/react-helmet": "^6.1.8",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
-		"gh-pages": "^6.0.0",
 		"react-scripts": "^5.0.1",
 		"typescript": "^4.4.4",
 		"web-vitals": "^1.1.2"
