--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "crypto-tracker",
+	"name": "crypto-ranking",
 	"version": "0.1.0",
 	"description": "crypto ranking search using react query & apexchart",
 	"license": "MIT",
 	"author": "toweringcloud",
-	"homepage": "https://enchanting-semolina-556992.netlify.app",
+	"homepage": "https://toweringcloud.github.io/crypto-ranking",
 	"inspiredby": "https://nomadcoders.co/react-masterclass",
 	"keywords": [
 		"react",
@@ -17,10 +17,10 @@
 	],
 	"type": "module",
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"@tanstack/react-query": "^5.0.5",
@@ -30,10 +30,12 @@
 		"react-apexcharts": "^1.4.1",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
+		"react-hook-form": "^7.47.0",
 		"react-router-dom": "^5.3.0",
 		"recoil": "^0.7.7",
-		"styled-components": "^5.3.1",
-		"styled-reset": "^4.3.4"
+		"recoil-persist": "^5.1.0",
+		"styled-components": "^6.0.7",
+		"styled-reset": "^4.5.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
@@ -41,15 +43,14 @@
 		"@types/react-helmet": "^6.1.8",
 		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
-		"react-scripts": "^5.0.1",
-		"typescript": "^4.4.4",
-		"web-vitals": "^1.1.2"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"@vitejs/plugin-react-swc": "^3.3.2",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
+		"typescript": "^5.0.2",
+		"vite": "^4.5.0"
 	},
 	"browserslist": {
 		"production": [
